[gd_scene load_steps=7 format=3 uid="uid://mije76kp1ljb"]

[ext_resource type="Script" path="res://Assets/Scenes/title_screen.gd" id="1_4f6n6"]
[ext_resource type="FontFile" uid="uid://cbxlxb8k77sh3" path="res://Assets/Fonts/DancingScript-Bold.ttf" id="1_6vahd"]
[ext_resource type="Texture2D" uid="uid://27tet1huonr8" path="res://Assets/UI/heart.png" id="2_fcpfs"]
[ext_resource type="Theme" uid="uid://c8ejyqahojvk0" path="res://Assets/Fonts/buttontheme.tres" id="4_bwiuo"]
[ext_resource type="PackedScene" uid="uid://b8jx1mlesv60x" path="res://Assets/Scenes/volume_changer.tscn" id="5_ke042"]
[ext_resource type="PackedScene" uid="uid://bo35d17fybqhx" path="res://Assets/Scenes/tutorial.tscn" id="6_ddgt8"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_4f6n6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.329412, 0.0431373, 0, 1)

[node name="Title" type="Label" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.177778
anchor_right = 0.5
anchor_bottom = 0.177778
offset_left = -651.5
offset_top = -120.0
offset_right = 651.5
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_6vahd")
theme_override_font_sizes/font_size = 200
text = "Romantic Evening"
metadata/_edit_use_anchors_ = true

[node name="Heart1" type="Sprite2D" parent="."]
position = Vector2(87, 89.0001)
rotation = -0.570723
scale = Vector2(10, 10)
texture = ExtResource("2_fcpfs")

[node name="Heart2" type="Sprite2D" parent="."]
position = Vector2(1513, 89)
rotation = 0.570723
scale = Vector2(10, 10)
texture = ExtResource("2_fcpfs")

[node name="MainContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -136.0
offset_right = 182.0
offset_bottom = 354.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Start" type="Button" parent="MainContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_bwiuo")
text = "Start"

[node name="Tutorial" type="Button" parent="MainContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_bwiuo")
text = "How to Play"

[node name="Options" type="Button" parent="MainContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_bwiuo")
text = "Options"

[node name="Quit" type="Button" parent="MainContainer"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_bwiuo")
text = "Quit"

[node name="OptionsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -110.0
offset_right = 145.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="OptionsContainer"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("1_6vahd")
theme_override_font_sizes/font_size = 70
text = "Volume:"

[node name="VolumeChanger" parent="OptionsContainer/Label" instance=ExtResource("5_ke042")]
layout_mode = 0
offset_left = 219.0
offset_top = 13.0
offset_right = 319.0
offset_bottom = 77.0

[node name="Back" type="Button" parent="OptionsContainer"]
texture_filter = 2
layout_mode = 2
theme = ExtResource("4_bwiuo")
text = "Back"

[node name="TutorialScreen" parent="." instance=ExtResource("6_ddgt8")]
unique_name_in_owner = true
visible = false
layout_mode = 2
anchors_preset = 0

[connection signal="pressed" from="MainContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="MainContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="OptionsContainer/Back" to="." method="_on_back_pressed"]
